src/test/ui/mismatched_types/issue-35030.stderr
error[E0308]: mismatched types
  --> $DIR/issue-35030.rs:9:14
   |
LL | impl<bool> Parser<bool> for bool {
   |      ---- this type parameter
LL |     fn parse(text: &str) -> Option<bool> {
LL |         Some(true)
   |              ^^^^ expected type parameter `bool`, found `bool`
   |
   = note: expected type parameter `bool` (type parameter `bool`)
                        found type `bool` (`bool`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
